Updated theme controller, Added a singleton class to handle the different instances of the matrix across different scenes, Changed MatrixController to reflect the changes with the singleton class, Updated some parts of MatrixFileHandler, but not much; nothing worth commenting on, Also, greatly reduced redundancy inside the MatrixView class. I hope with those changes, the code will be much more readable, fin.